# probabilistic-and-unsupervised-learning

./: .gitignore  README.md  main.py  main.tex  pyproject.toml  submission.tex
data/: binarydigits.txt
outputs/q2/: q2c.csv
outputs/q3/: q3e-compression-total.csv  q3e-compression.csv
outputs/q5/: q5a-invariant.csv  q5a-transition.csv  q5d-decrypter.csv  q5d-iterations.csv  q5d-trials.csv
src/: constants.py
src/solutions/: q1.py  q2.py  q3.py  q5.py
