[tool.poetry]
name = "comp0086-assignment"
version = "0.1.0"
description = "Assignment for Probabilistic and Unsupervised Learning (COMP0086) at UCL 2022"
authors = ["James Wu <jian.wu.22@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# Core dependencies
numpy="~1.21.5"
scipy="~1.9.1"
matplotlib="~3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
